RESULTS/AutoSpec/raw_results/out-4o-nla/11_0003/11_merged.txt
/home/yangfp/AutoSpec/AutoSpec1/out/11_0003/11_merged.c:25:75: error: unterminated comment
   25 |     loop invariant x == a * (\pow(z, c) - 1) / (z - 1); /* Geometric sum formula */;
      |                                                                           ^
